Extract jvm6-specific test utils, add codegen on specific jdk tests